...
            android:layout_marginEnd="5dp"
            android:layout_marginTop="275dp"
            app:layout_constraintTop_toTopOf="@id/item_detail_frame1"
            app:layout_constraintEnd_toEndOf="@id/item_detail_frame1">

                <ImageButton
                    android:id="@+id/item_detail_favoris_button"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/ic_baseline_circle_60"
                    app:srcCompat="@drawable/ic_baseline_star_black_24" />

        </FrameLayout>
...
